; ModuleID = '/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_abd.c_abd_return_buf_copy.c'
source_filename = "/home/carl/AnghaBench/zfs/module/os/linux/zfs/extr_abd.c_abd_return_buf_copy.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @abd_return_buf_copy(i32* %0, i8* %1, i64 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i64, align 8
  store i32* %0, i32** %4, align 8
  store i8* %1, i8** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @abd_is_linear(i32* %7)
  %9 = icmp ne i32 %8, 0
  br i1 %9, label %15, label %10

10:                                               ; preds = %3
  %11 = load i32*, i32** %4, align 8
  %12 = load i8*, i8** %5, align 8
  %13 = load i64, i64* %6, align 8
  %14 = call i32 @abd_copy_from_buf(i32* %11, i8* %12, i64 %13)
  br label %15

15:                                               ; preds = %10, %3
  %16 = load i32*, i32** %4, align 8
  %17 = load i8*, i8** %5, align 8
  %18 = load i64, i64* %6, align 8
  %19 = call i32 @abd_return_buf(i32* %16, i8* %17, i64 %18)
  ret void
}

declare dso_local i32 @abd_is_linear(i32*) #1

declare dso_local i32 @abd_copy_from_buf(i32*, i8*, i64) #1

declare dso_local i32 @abd_return_buf(i32*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
